--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -7,7 +7,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
       </div>
       <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-        <li><a class="link link-hover" href="/contact">Contacts</a></li>
+        <li><a class="link link-hover" href="/contact">Contact Us</a></li>
         <li>
           <a class="link link-hover">I'm a simple link</a>
         </li>
@@ -21,13 +21,13 @@
   <!-- Desktop View -->
   <div class="hidden navbar-center lg:flex">
     <ul class="px-1 menu menu-horizontal">
-      <li><a class="link link-hover" href="/contact">Contacts</a></li>
+      <li><a class="link link-hover" href="/contact">Contact Us</a></li>
       <li><a class="link link-hover">I'm a simple link</a>
       </li>
       <li><a class="link link-hover">I'm a simple link</a></li>
     </ul>
   </div>
   <div class="navbar-end">
-    <a class="btn" href="/auth/login">Profile</a>
+    <a class="btn" href="/profile/profile">Profile</a>
   </div>
 </div>
