--- a/src/views/pages/auth/register.ejs
+++ b/src/views/pages/auth/register.ejs
@@ -84,8 +84,5 @@
      </div>
    </div>
 
-   <!-- TODO: Make Profile a different directory -->
-   <!-- TODO: Set extra forms for people who registered in a different route in auth. Protect it with session -->
-   <!-- TODO: Set up routes and auth -->
-   <!-- TODO: Set up sessions and jwt -->
+   <!-- TODO: Set up jwt -->
    <!-- TODO: Set up agents card in contacts above the contact form -->
