--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,19 +1,22 @@
-
-    <div class="flex flex-col h-screen gap-4 text-center">
-        <div class="min-h-screen hero" style="background-image: url(https://img.daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
-            <div class="hero-overlay bg-opacity-60"></div>
-            <div class="text-center hero-content text-neutral-content">
-              <div class="max-w-md lg:max-w-lg">
-                <h1 class="mb-5 text-5xl font-bold">Welcome to the Arcane Sanctum</h1>
-                <p class="mb-5 lg:text-2xl ">The only place where you can find a variety of tomes and spells not found anywhere else</p>
-                <button class="btn btn-primary">Get Started</button>
-              </div>
-            </div>
-         </div>
-
-    </div>
-    <section class="h-screen border border-black">
-        
-    </section>
-
-   
+<div class="flex flex-col h-screen gap-4 text-center">
+	<div
+		class="min-h-screen hero"
+		style="
+			background-image: url(https://img.daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);
+		">
+		<div class="hero-overlay bg-opacity-60"></div>
+		<div class="text-center hero-content text-neutral-content">
+			<div class="max-w-md lg:max-w-lg">
+				<h1 class="mb-5 text-5xl font-bold"
+					>Welcome to the Arcane Sanctum</h1
+				>
+				<p class="mb-5 lg:text-2xl"
+					>The only place where you can find a variety of
+					tomes and spells not found anywhere else</p
+				>
+				<button class="btn btn-primary">Get Started</button>
+			</div>
+		</div>
+	</div>
+</div>
+<section class="h-screen border border-black"> </section>
