--- a/src/views/partials/_footer.ejs
+++ b/src/views/partials/_footer.ejs
@@ -1,4 +1,5 @@
-<footer class="mt-2 border-t border-white">
-     <p>&copy; 2024 My Website</p>
-   </footer>
-   
+<footer class="p-4 footer footer-center bg-base-300 text-base-content">
+  <aside>
+    <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+  </aside>
+</footer>
