--- a/src/views/partials/_profileHeader.ejs
+++ b/src/views/partials/_profileHeader.ejs
@@ -1,35 +1,39 @@
 <div class="border-b border-white navbar bg-base-100">
 
-     <!-- Mobile View -->
-     <div class="navbar-start">
-       <div class="dropdown">
-         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-           <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
-         </div>
-         <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-           <li><a class="link link-hover" href="/contact">Contacts</a></li>
-           <li>
-             <a class="link link-hover">I'm a simple link</a>
-           </li>
-           <li><a class="link link-hover">I'm a simple link</a></li>
-         </ul>
-       </div>
-       <a class="text-md lg:text-xl btn btn-ghost" href="/">Arcane Archives</a>
-       <input type="checkbox" value="synthwave" class="hidden toggle theme-controller lg:block"/>
-     </div>
-   
-     <!-- Desktop View -->
-     <div class="hidden navbar-center lg:flex">
-       <ul class="px-1 menu menu-horizontal">
-         <li><a class="link link-hover" href="/contact">Contacts</a></li>
-         <li><a class="link link-hover">I'm a simple link</a>
-         </li>
-         <li><a class="link link-hover">I'm a simple link</a></li>
-       </ul>
-     </div>
-     <div class="navbar-end">
-       <form action="/auth/logout">
-         <button type="submit" class="btn btn-error">Logout</button>
-        </form>
-     </div>
-   </div>
+  <!-- Mobile View -->
+  <div class="navbar-start">
+    <div class="dropdown">
+      <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+      </div>
+      <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+        <li><a class="link link-hover" href="/contact">Contact Us</a></li>
+        <li>
+          <a class="link link-hover">I'm a simple link</a>
+        </li>
+        <li><a class="link link-hover">I'm a simple link</a></li>
+      </ul>
+    </div>
+    <a class="text-md lg:text-xl btn btn-ghost" href="/">Arcane Archives</a>
+    <label class="grid cursor-pointer place-items-center">
+      <input type="checkbox" value="luxury" class="col-span-2 col-start-1 row-start-1 toggle theme-controller bg-base-content" id="theme-toggle" <%= theme === 'dark' ? 'checked' : '' %> />
+      <svg class="col-start-1 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/></svg>
+      <svg class="col-start-2 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
+    </label>
+  </div>
+
+  <!-- Desktop View -->
+  <div class="hidden navbar-center lg:flex">
+    <ul class="px-1 menu menu-horizontal">
+      <li><a class="link link-hover" href="/contact">Contact Us</a></li>
+      <li><a class="link link-hover">I'm a simple link</a>
+      </li>
+      <li><a class="link link-hover">I'm a simple link</a></li>
+    </ul>
+  </div>
+  <div class="navbar-end">
+    <form action="/auth/logout">
+      <button class="btn btn-error" type="submit">Logout</button>
+    </form>
+  </div>
+</div>
