--- a/src/views/partials/_profileContent1.ejs
+++ b/src/views/partials/_profileContent1.ejs
@@ -1,43 +1,80 @@
-<form action="" method="post">
-     <section class="grid grid-cols-3 gap-4 grid-cols4">
+<form action="/profile/register2" method="post">
+	<section class="grid grid-cols-3 grid-rows-4 gap-4">
+		<div class="max-w-sm form-control">
+			<label for="firstName">First Name</label>
+			<input
+				type="text"
+				placeholder="John"
+				name="firstName"
+				class="input input-bordered"
+				required />
+		</div>
 
-     <div class="max-w-sm form-control">
-          <label for="firstName">First Name</label>
-          <input type="text" placeholder="John" name="firstName" class="input input-bordered" required />
-     </div>
-     
-     <div class="max-w-sm form-control">
-          <label for="lastName">Last Name</label>
-          <input type="text" placeholder="Smith" name="lastName" class="input input-bordered" required />
-     </div>
-     
-     <div class="max-w-sm form-control">
-          <label for="postal">Postal Code</label>
-          <input type="text" placeholder="AAA AAA" name="postal" class="input input-bordered" required />
-     </div>
-     <div class="w-full col-span-3 form-control">
-          <label for="postal" class="text-center">Address</label>
-          <input type="text" placeholder="123 Main St" name="postal" class="input input-bordered" required />
-     </div>
-     <div class="max-w-sm row-start-3 form-control">
-          <label class="label">
-               <span class="label-text">Province</span>
-          </label>
-          <select name="province" class="w-full max-w-xs select select-bordered">
-               <% provinces.forEach(province => { %>)
-                    <option value="<%= province %>"><%= province %></option>
-               <% }) %>
-             </select>
-     </div>
-     <div class="max-w-sm row-start-3 form-control">
-          <label class="label">
-               <span class="label-text">City</span>
-          </label>
-          <select name="city" id="city" class="w-full max-w-xs select select-bordered">
-          </select>
-     </div>
-     
-</section>
+		<div class="max-w-sm form-control">
+			<label for="lastName">Last Name</label>
+			<input
+				type="text"
+				placeholder="Smith"
+				name="lastName"
+				class="input input-bordered"
+				required />
+		</div>
+
+		<div class="max-w-sm form-control">
+			<label for="phone">Phone Number</label>
+			<input
+				type="text"
+				placeholder="(444) 444-4444"
+				name="phone"
+				class="input input-bordered"
+				required />
+		</div>
+
+		<div class="w-full col-span-3 form-control">
+			<label for="address" class="text-center">Address</label>
+			<input
+				type="text"
+				placeholder="123 Main St"
+				name="address"
+				class="input input-bordered"
+				required />
+		</div>
+		<div class="max-w-sm row-start-3 form-control">
+			<label class="label">
+				<span class="label-text">Province</span>
+			</label>
+			<select
+				name="province"
+				class="w-full max-w-xs select select-bordered">
+				<% provinces.forEach(province => { %>)
+				<option value="<%= province %>"><%= province %></option>
+				<% }) %>
+			</select>
+		</div>
+		<div class="max-w-sm row-start-3 form-control">
+			<label class="label">
+				<span class="label-text">City</span>
+			</label>
+			<input
+				type="text"
+				placeholder="Toronto"
+				name="city"
+				class="input input-bordered"
+				required />
+		</div>
+          <div class="max-w-sm row-start-3 form-control">
+               <label class="label">
+                    <span class="label-text">Postal Code</span>
+               </label>
+               <input 
+                    type="text"
+                    placeholder="A1A 1A1"
+                    name="postal"
+                    class="input input-bordered"
+                    required />
+          </div>
+          
+          <button class="col-start-2 row-start-4 btn btn-primary">Save</button>
+	</section>
+
 </form>
-
-<!-- TODO: Complete Fetch call -->
