--- a/src/views/pages/contact.ejs
+++ b/src/views/pages/contact.ejs
@@ -7,8 +7,8 @@
 				alt="contact background"
 				class="absolute w-[93%] h-[25vh] lg:hidden rounded-lg -z-50" />
                     <div class="max-w-lg">
-                         <h1 class="text-2xl font-bold lg:text-5xl">Contact Us!</h1>
-                         <p class="py-6 text-sm antialiased">
+                         <h1 class="text-2xl font-bold text-white lg:text-5xl">Contact Us!</h1>
+                         <p class="py-6 text-sm antialiased text-white">
                               Provident cupiditate voluptatem et in. Quaerat fugiat ut
                               assumenda excepturi exercitationem quasi. In deleniti
                               eaque aut repudiandae et a id nisi.
