--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -2,7 +2,7 @@
 	<div
 		class="min-h-screen hero"
 		style="
-			background-image: url(https://img.daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);
+			background-image: url(/assets/images/heroBg.jpg);
 		">
 		<div class="hero-overlay bg-opacity-60"></div>
 		<div class="text-center hero-content text-neutral-content">
@@ -19,4 +19,5 @@
 		</div>
 	</div>
 </div>
+
 <section class="h-screen border border-black"> </section>
