--- a/src/views/pages/profile/profile.ejs
+++ b/src/views/pages/profile/profile.ejs
@@ -17,9 +17,9 @@
           <%- include('../../partials/_profileBorrowedTomes.ejs') %>
      </div>
      
-       <input type="radio" name="my_tabs_2" role="tab" class="tab" aria-label="Tab 3" />
+       <input type="radio" name="my_tabs_2" role="tab" class="tab" aria-label="Your Spells" />
        <div role="tabpanel" class="p-6 tab-content bg-base-100 border-base-300 rounded-box">
-          <%- include('../../partials/_profileContent1.ejs') %>
+          <%- include('../../partials/_profileSpells.ejs') %>
      </div>
      </div>
 </div>
