--- a/src/views/partials/_profileHeader.ejs
+++ b/src/views/partials/_profileHeader.ejs
@@ -26,9 +26,8 @@
   <div class="hidden navbar-center lg:flex">
     <ul class="px-1 menu menu-horizontal">
       <li><a class="link link-hover" href="/contact">Contact Us</a></li>
-      <li><a class="link link-hover">I'm a simple link</a>
-      </li>
-      <li><a class="link link-hover">I'm a simple link</a></li>
+      <li><a class="link link-hover" href="/agents">Agents</a></li>
+      <li><a class="link link-hover" href="/archives">Archive</a></li>
     </ul>
   </div>
   <div class="navbar-end">
