--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0" />
-		<title><%= title %></title>
-		<link rel="stylesheet" href="/assets/css/styles.css" />
-	</head>
-	<body>
-		<%- include('../partials/_header') %>
-
-		<main> <%- body %> </main>
-
-		<%- include('../partials/_footer') %> <%- script %>
-		<script>
-			// Add JavaScript to change the theme and send the selection to the server
-			document
-				.getElementById("theme-toggle")
-				.addEventListener("change", function () {
-					const theme = this.checked ? "luxury" : "retro";
-					fetch("/theme", {
-						method: "POST",
-						headers: {
-							"Content-Type": "application/json",
-						},
-						body: JSON.stringify({ theme }),
-					});
-					document.documentElement.setAttribute(
-						"data-theme",
-						theme
-					); // Update the theme immediately
-				});
-
-		</script>
-	</body>
+<html lang="en" data-theme="<%= theme %>">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= title %></title>
+    <link rel="stylesheet" href="/assets/css/tailwind.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
+</head>
+<body class="theme-<%= theme %>">
+    <%- include('../partials/_header') %>
+    <main class="container p-4 mx-auto">
+        <%- body %>
+    </main>
+    <%- include('../partials/_footer') %>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const themeToggle = document.getElementById("theme-toggle");
+            if (themeToggle) {
+                themeToggle.addEventListener("change", function () {
+                    const theme = this.checked ? "luxury" : "retro";
+                    fetch("/theme", {
+                        method: "POST",
+                        headers: {
+                            "Content-Type": "application/json",
+                        },
+                        body: JSON.stringify({ theme }),
+                    });
+                    document.documentElement.setAttribute("data-theme", theme); // Update the theme immediately
+                });
+            }
+        });
+    </script>
+</body>
 </html>
