--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -2842,6 +2842,10 @@ input.tab:checked + .tab-content,
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .font-bold {
   font-weight: 700;
 }
